don't remember what I made

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
 
     <ListView android:text="@string/hello_world" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listViewForecast" />
+        android:id="@+id/listview_forecast" />
 
 
 </FrameLayout>
