--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
 
-    <ListView android:text="@string/hello_world" android:layout_width="match_parent"
+    <ListView android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview_forecast" />
 
